--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <input type="hidden" name="MERCHANTCODE" value="HACKATHON2017" />
 
-<input type="hidden" name="PRN" value="Testgo" />
+<input type="hidden" name="PRN" value="Testgo1" />
 
 <input type="hidden" name="REQTIMESTAMP" value="20160623132359958" />
 
@@ -38,7 +38,7 @@
 
 <input type="hidden" name="CHECKSUM" value="a671b9929b825dd4143ea83545065e30" />
 
-<button type="submit">Submit</button>
+<input type="submit"/>
 
 </form>
 </body>
