--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <html>
+  <script>document.forms[0].submit();</script>
 <body>
 <form action="http://emitrauat.rajasthan.gov.in/payments/v1/init" method="POST">
 
