--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <input type="hidden" name="CHECKSUM" value="a671b9929b825dd4143ea83545065e30" />
 
-<input type="submit"/>
+<Button type="submit">Proceed</Button>
 
 </form>
 </body>
