--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 
 <html>
-  <script type="text/javascript">document.forms[0].submit();</script>
+  <script type="text/javascript">document.forms.submit();</script>
 <body>
-<form action="http://emitrauat.rajasthan.gov.in/payments/v1/init" method="POST">
+<form name="forms" action="http://emitrauat.rajasthan.gov.in/payments/v1/init" method="POST">
 
 <input type="hidden" name="MERCHANTCODE" value="HACKATHON2017" />
 
